--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <script src="/systemjs.config.js"></script>
+    <script>
+        System.import('app.js')
+                .then(null, console.error.bind(console));
+    </script>
+    <hello-world></hello-world>
 </body>
 </html>
