--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         System.import('app.js')
                 .then(null, console.error.bind(console));
     </script>
-    <hello-world></hello-world>
+    <re-hello-world></re-hello-world>
 </body>
 </html>
