changed index layout, added some funcionality to the form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
         System.import('app.js')
                 .then(null, console.error.bind(console));
     </script>
-    <re-hello-world></re-hello-world>
+    <!-- Menu Bar -->
+    <div class="ui menu">
+        <div class="ui container">
+            <a href="#" class="header item">
+                <img class="logo" src="resources/images/ng-book-2-minibook.png">
+                ng-book 2
+            </a>
+            <div class="header item borderless">
+                <h1 class="ui header">
+                    Angular 2 Simple Reddit
+                </h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui main text container">
+        <re-app></re-app>
+    </div>
 </body>
 </html>
